--- a/layout/_partial/archive/categories.ejs
+++ b/layout/_partial/archive/categories.ejs
@@ -16,7 +16,7 @@ site.categories.each(function(category, i) {
 </div>
 <div class="mdui-row simple-archive-name">
     <div class="mdui-col-md-10 mdui-col-offset-md-1 mdui-col-xs-12 mdui-valign simple-archive-name-inner">
-        <a href="/categories" class="mdui-btn">All</a>
+        <a href="<%= config.root %>categories" class="mdui-btn">All</a>
         <%
             site.categories.each(function(category, i) {
                 if (i > index - 2 && i < index + 10) {
@@ -27,11 +27,12 @@ site.categories.each(function(category, i) {
                         color = '';
                     }
                     %>
-                    <a href="/categories/<%=category.name%>" class="mdui-btn <%= color %>"><%= category.name %></a>
+                    <a href="<%= url_for(category.path) %>" class="mdui-btn <%= color %>"><%= category.name %></a>
                     <%
                 }
             });
         %>
+        <a href="javascript:;" class="mdui-btn simple-archive-btn" id="simple-all">…</a>
     </div>
 </div>
 
@@ -41,8 +42,19 @@ site.categories.each(function(category, i) {
     });
     var sortPosts = _[_.orderBy ? 'orderBy' : 'sortByOrder'](posts, ['date'], ['desc']);
 %>
+
 <div class="mdui-row simple-height">
-    <div class="mdui-col-md-7 mdui-col-offset-md-1 mdui-col-xs-12">
+    <div class="mdui-col-md-7 mdui-col-offset-md-1 mdui-col-xs-12  mdui-p-b-2 simple-archive-labels" style="display:none;">
+        <div class="mdui-card mdui-shadow-12">
+            <div class="mdui-card-content mdui-typo">
+                <% site.categories.each(function(category, i) {
+                    var color = 'mdui-color-' + theme.tags.colors[i % theme.tags.colors.length]; %>
+                    <a href="<%= url_for(category.path) %>" class="mdui-btn mdui-btn-dense <%= color %> mdui-hoverable simple-hot-tags" style="margin-right: 10px;margin-bottom: 10px;"><%=category.name %></a>
+                <% }); %>
+            </div>
+        </div>    
+    </div>
+    <div class="mdui-col-md-7 mdui-col-offset-md-1 mdui-col-xs-12 simple-archive-articles">
         <% sortPosts.forEach(function(post, i) { %>
             <%- partial('_partial/article-excerpt', {item: post, hide_excerpt: true}) %>
         <% }); %>
