--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,19 +1,22 @@
 <footer class="footer mdui-color-theme mdui-text-center">
-    <span>
-        <%- config.author %> &copy;
-        <% if (theme.since_year && theme.since_year < date(new Date(), 'YYYY')) {%>
-            <%- theme.since_year %> -
-        <% } %>
-        <%- date(new Date(), 'YYYY') %>
-    </span>
-    .
-    <span>Power by 
-        <a href="http://hexo.io/" target="_blank">
-            <em>Hexo</em>
-        </a>
-        Theme
-        <a href="https://github.com/jiangdequan/hexo-theme-mdui" target="_blank">
-            <em>mdui</em>
-        </a>
-    </span>
+    <div class="mdui-typo">
+        <p class="simple-footer-license">
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank">署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)</a>
+        </p>
+        <p class="simple-footer-copyright">
+            <%- config.author %> &copy;
+            <% if (theme.since_year && theme.since_year < date(new Date(), 'YYYY')) {%>
+                <%- theme.since_year %> -
+            <% } %>
+            <%- date(new Date(), 'YYYY') %>
+            .Power by 
+            <a href="http://hexo.io/" target="_blank">
+                <em>Hexo</em>
+            </a>
+            Theme
+            <a href="https://github.com/jiangdequan/hexo-theme-mdui" target="_blank">
+                <em>mdui</em>
+            </a>
+        </p>
+    </div>
 </footer>
