--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,46 +1,5 @@
 <%# article page %>
 
-<%# toc %>
-<div class="mdui-drawer mdui-drawer-right simple-toc-cls" id="simple-toc">
-    <nav class="post-toc-wrap post-toc-shrink" style="width:240px;">
-        <div class="mdui-card mdui-hoverable">
-            <div class="mdui-card-header">
-                <h3><i class="mdui-list-item-icon mdui-icon ion-ios-flame"></i> TOC</h3>
-            </div>
-            <div class="mdui-card-content" style="height:400px;overflow-y: auto;overflow-x:hidden;">
-                <% if (page.toc != false){ %>
-                    <%- toc(page.content, {list_number: false, class: "post-toc"}) %>
-                <% } %>
-            </div>
-        </div>
-    </nav>
-</div>
-
-<%# reward %>
-<div class="mdui-dialog simple-donation-cls" id="simple-donation">
-    <div class="mdui-dialog-title">支持一下?</div>
-    <div class="mdui-row mdui-m-b-3">
-        <div class="mdui-col-md-12 mdui-text-center">
-            <p id="simple-alipay">
-                <img src="/images/alipay.jpg"/>
-                <br>
-                <span class="mdui-typo-title">Alipay 支付宝</span>
-            </p>
-            <p class="simple-wechat-cls" id="simple-wechat">
-                <img src="/images/wechat.jpg"/>
-                <br>
-                <span class="mdui-typo-title">WeChat 微信</span>
-            </p>
-        </div>
-        <div class="mdui-col-md-12 mdui-text-center">
-            <label class="mdui-switch" id="simple-switch">
-                <input type="checkbox"/>
-                <i class="mdui-switch-icon"></i>
-            </label>
-        </div>
-    </div>
-</div>
-
 <div class="simple-post-header"></div>
 
 <%# content %>
@@ -51,7 +10,7 @@
             <h1><%- page.title %></h1>
 
             <%# post date %>
-            <small class="mdui-typo-body-2-opacity mdui-m-b-1">
+            <small class="mdui-typo-body-2-opacity mdui-m-b-1 simple-post-date">
                 <%= page.date.format(config.date_format) %>
             </small>
 
@@ -63,6 +22,8 @@
                     <del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del>
                 </span>
             </div>
+
+            <br>
 
             <%# content %>
             <div class="mdui-m-b-2 simple-content">
@@ -155,6 +116,47 @@
             <a href="<%- url_for(page.next.path) %>"><%= page.next.title %><label class="label-post-next">☞</label></a>
         </div>
     <% } %>
+</div>
+
+<%# toc %>
+<div class="mdui-drawer mdui-drawer-right simple-toc-cls" id="simple-toc">
+    <nav class="post-toc-wrap post-toc-shrink" style="width:240px;">
+        <div class="mdui-card mdui-hoverable">
+            <div class="mdui-card-header">
+                <h3><i class="mdui-list-item-icon mdui-icon ion-ios-flame"></i> TOC</h3>
+            </div>
+            <div class="mdui-card-content" style="height:400px;overflow-y: auto;overflow-x:hidden;">
+                <% if (page.toc != false){ %>
+                    <%- toc(page.content, {list_number: false, class: "post-toc"}) %>
+                <% } %>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<%# reward %>
+<div class="mdui-dialog simple-donation-cls" id="simple-donation">
+    <div class="mdui-dialog-title">支持一下?</div>
+    <div class="mdui-row mdui-m-b-3">
+        <div class="mdui-col-md-12 mdui-text-center">
+            <p id="simple-alipay">
+                <img src="/images/alipay.jpg"/>
+                <br>
+                <span class="mdui-typo-title">Alipay 支付宝</span>
+            </p>
+            <p class="simple-wechat-cls" id="simple-wechat">
+                <img src="/images/wechat.jpg"/>
+                <br>
+                <span class="mdui-typo-title">WeChat 微信</span>
+            </p>
+        </div>
+        <div class="mdui-col-md-12 mdui-text-center">
+            <label class="mdui-switch" id="simple-switch">
+                <input type="checkbox"/>
+                <i class="mdui-switch-icon"></i>
+            </label>
+        </div>
+    </div>
 </div>
 
 <%# comments %>
