--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -46,9 +46,9 @@
                     }
     
                     for (var i = 0; i < hits.length; i++) {
-                        var path = hits[i].slug;
+                        var path = hits[i].permalink;
                         var title = hits[i]._highlightResult.title.value;
-                        resultObj.append('<a href="/' + path + '" class="mdui-list-item mdui-ripple">' + title + '</a>');
+                        resultObj.append('<a href="' + path + '" class="mdui-list-item mdui-ripple">' + title + '</a>');
                     }
                     inst.open();
                 }
