--- a/layout/_partial/index/latest-message.ejs
+++ b/layout/_partial/index/latest-message.ejs
@@ -1,6 +1,6 @@
 <div class="mdui-card mdui-hoverable simple-latest-message">
     <div class="mdui-card-header">
-        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-megaphone"></i> 最新消息</h3>
+        <h3><i class="fas fa-bullhorn"></i> 最新消息</h3>
     </div>
     <div class="mdui-card-content mdui-typo">
         <small id="message">暂无消息!!!</small>
