--- a/layout/_partial/index/wechat-public-number.ejs
+++ b/layout/_partial/index/wechat-public-number.ejs
@@ -1,6 +1,6 @@
 <div class="mdui-card mdui-hoverable">
     <div class="mdui-card-header">
-        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-contacts"></i> 公众号</h3>
+        <h3><i class="fab fa-weixin"></i> 公众号</h3>
     </div>
     <div class="mdui-card-content mdui-typo mdui-text-center">
         <img src="/images/qrcode_for_gh.jpg"/>
