--- a/layout/_partial/index/hot-tags.ejs
+++ b/layout/_partial/index/hot-tags.ejs
@@ -41,7 +41,7 @@ for (var i = 0; i < tagArray.length - 1; i++) {
 
 <div class="mdui-card mdui-hoverable">
     <div class="mdui-card-header">
-        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-flame"></i> 热门标签</h3>
+        <h3><i class="fas fa-fire"></i> 热门标签</h3>
     </div>
     <div class="mdui-card-content">
     <% for (var i = 0; i < tagArray.length; i++) {
