--- a/layout/_partial/index/recent-posts.ejs
+++ b/layout/_partial/index/recent-posts.ejs
@@ -8,7 +8,7 @@
 
 <div class="mdui-card mdui-hoverable simple-recent-posts">
     <div class="mdui-card-header">
-        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-book"></i> 最新发布</h3>
+        <h3><i class="fas fa-book"></i> 最新发布</h3>
     </div>
     <div class="mdui-card-content mdui-typo">
         <% sortPosts.forEach(function(item, i) {
