--- a/source/css/common.css
+++ b/source/css/common.css
@@ -317,6 +317,7 @@ body {
     font-size: 12px;
     line-height: 28px;
     color: white !important;
+    margin-bottom: 2px;
 }
 
 .simple-article-tags,
