使用cdn,删除分享等功能

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -1,9 +1,9 @@
 
-<script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script src="https://cdn.bootcss.com/mdui/0.4.1/js/mdui.min.js"></script>
+<script async src="//cdn.busuanzi.ibruce.info/cdn/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script src="https://cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script>
 
-<%- js('modules/algolia/algoliasearchLite.min.js') %>
+<script src="https://cdn.bootcss.com/algoliasearch/3.30.0/algoliasearchLite.min.js"></script>
 
 <%- js('js/common.js') %>
 <%- partial('_partial/plugins/statistics') %>
