--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -18,10 +18,10 @@
     <title><%= config.title %> | <%= config.subtitle %></title>
 
     <%# Font Awesome %>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://cdn.bootcss.com/font-awesome/5.4.1/css/all.css" rel="stylesheet">
 
     <%# MDUI %>
-    <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
+    <link href="https://cdn.bootcss.com/mdui/0.4.1/css/mdui.min.css" rel="stylesheet">
 
     <%# Common %>
     <%- css('css/common.css') %>
