--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -14,6 +14,7 @@
         <%- partial('_partial/index/hot-tags') %>
         <%- partial('_partial/index/recent-posts') %>
         <%- partial('_partial/index/wechat-public-number') %>
+        <%- partial('_partial/index/zsxq') %>
     </div>
 </div>
 
