add configs of images

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -7,13 +7,13 @@
     <meta name="author" content="<%= config.author %>">
     <meta name="theme-color" content="#00bcd4">
 
-    <link rel="icon" href="/favicon/favicon.ico">
-    <link rel="icon" sizes="192x192" href="/images/icon/icon-192x192.png">
-    <link rel="shortcut icon" href="/images/icon/icon-72x72.png">
-    <link rel="apple-touch-icon" href="/images/icon/icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/icon/icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/icon/icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon/icon-180x180.png">
+    <link rel="icon" href="<%- theme.head.favicon %>">
+    <link rel="icon" sizes="192x192" href="<%- theme.head.high_res_favicon %>">
+    <link rel="shortcut icon" href="<%- theme.head.apple_touch_icon %>">
+    <link rel="apple-touch-icon" href="<%- theme.head.apple_touch_icon %>">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%- theme.head.apple_touch_icon %>">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%- theme.head.apple_touch_icon_144 %>">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%- theme.head.apple_touch_icon_180 %>">
 
     <title><%= config.title %> | <%= config.subtitle %></title>
 
