--- a/layout/_partial/index/wechat-public-number.ejs
+++ b/layout/_partial/index/wechat-public-number.ejs
@@ -3,7 +3,7 @@
         <h3><i class="fab fa-weixin"></i> 公众号</h3>
     </div>
     <div class="mdui-card-content mdui-typo mdui-text-center">
-        <img src="/images/qrcode_for_gh.jpg"/>
+        <img src="<%- theme.index.gongzhonghao %>"/>
     </div>
 </div>
 <br>
