--- a/layout/_partial/index/zsxq.ejs
+++ b/layout/_partial/index/zsxq.ejs
@@ -3,7 +3,7 @@
         <h3><i class="fas fa-globe"></i> 知识星球</h3>
     </div>
     <div class="mdui-card-content mdui-typo mdui-text-center">
-        <img src="/images/zsxq.jpg"/>
+        <img src="<%- theme.index.zsxq %>"/>
     </div>
 </div>
 <br>
