--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -30,11 +30,11 @@
         <div class="mdui-toolbar-spacer"></div>
 
         <div class="mdui-textfield mdui-textfield-expandable mdui-float-right simple-searchbar">
-            <button class="mdui-textfield-icon mdui-btn mdui-btn-icon">
+            <button class="mdui-textfield-icon mdui-btn mdui-btn-icon simple-white-btn">
                 <i class="mdui-icon material-icons">search</i>
             </button>
             <input class="mdui-textfield-input" type="text" placeholder="Search" id="simple-input-search"/>
-            <button class="mdui-textfield-close mdui-btn mdui-btn-icon">
+            <button class="mdui-textfield-close mdui-btn mdui-btn-icon simple-white-btn">
                 <i class="mdui-icon material-icons">close</i>
             </button>
         </div>
